# Agentic-AI-

AI_AGENT_WORKFLOW/: README.md  install.sh  main.py  project.toml  pyproject.toml  requirement.txt  tool workflow.txt
AI_AGENT_WORKFLOW/Agent/: agent.py  session.py
AI_AGENT_WORKFLOW/Tools/: base.py  registry.py
AI_AGENT_WORKFLOW/Tools/builtin/: __init__.py  edit_file.py  shell.py  write_file.py
AI_AGENT_WORKFLOW/context/: manager.py
AI_AGENT_WORKFLOW/nexus_agent/: main.py
AI_AGENT_WORKFLOW/nexus_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
AI_AGENT_WORKFLOW/nexus_agent/Agent/: agent.py  events.py  session.py
AI_AGENT_WORKFLOW/nexus_agent/Tools/: base.py  registry.py
AI_AGENT_WORKFLOW/nexus_agent/Tools/builtin/: __init__.py  edit_file.py  shell.py  write_file.py
AI_AGENT_WORKFLOW/nexus_agent/config/: config.py
AI_AGENT_WORKFLOW/nexus_agent/context/: manager.py
AI_AGENT_WORKFLOW/nexus_agent/ui/: agentui.py
AI_AGENT_WORKFLOW/ui/: agentui.py
AI_AGENT_WORKFLOW/utils/: text.py
