[project]
name = "nexus-agent"
version = "0.1.0"
description = "AI coding agent for the terminal"
requires-python = ">=3.11"

dependencies = [
    "click",
    "ddgs",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "httpx",
    "langchain",
    "langchain_chroma",
    "langchain_community",
    "langchain_core",
    "langchain_openai",
    "openai",
    "pdfminer.six",
    "platformdirs",
    "playwright",
    "pydantic",
    "requests",
    "rich",
    "sentence-transformers",
    "tomli",
    "tweepy",
    "unstructured",
    "unstructured[pdf]",
]

[project.scripts]
nexus = "nexus_agent.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nexus_agent*"]
